test/files/invalid/order_include_decl.stderr
[0m[1m[38;5;9merror[0m[1m: Cannot have includes after the first type declaration[0m
  [0m[34m┌─[0m test/files/invalid/order_include_decl.fbs:1:1
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m table Foo {}
  [0m[34m│[0m [0m[34m------------[0m [0m[34mtype declaration was here[0m
[0m[34m2[0m [0m[34m│[0m include "/dev/null";
  [0m[34m│[0m [0m[34m--------------------[0m [0m[34minclude was here[0m

Error: Bailing because of errors
